Fixed sentence because im bad at grammar

--- a/work.html
+++ b/work.html
@@ -59,9 +59,9 @@
                   </div>
                   <div class="card-footer">
                     <p>December 2013 - Present</p>
-                    <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7. From small support roles on existing sites, to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
-                    <p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Multiple Web Frameworks, PhotoShop</p>
-                    <a class="card-action" href="http://then7.com" target="_blank">Link to TEN7</a>
+                    <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7, from supporting roles to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
+                    <p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Multiple Web Frameworks, PhotoShop.</p>
+                    <a class="card-action" href="http://ten7.com" target="_blank">Link to TEN7</a>
                   </div>
                 </div>
               </div>
