--- a/work.html
+++ b/work.html
@@ -74,8 +74,8 @@
                   </div>
                   <div class="card-footer">
                     <p>September 2013 - Present</p>
-                    <p><strong>Description: </strong>As a DevOps Engineer, my responsibilities focused mainly on stie updates and maintenance. This would occur across multiple environments, on production and development servers. I have also maintained and migrated git repositories for every site we have developed or currently support.</p>
-                    <p><strong>Skills: </strong>git (including branches), bash scripting, command line tools (drush, mysql), site deployment on live servers, Drupal core and contributed module updates, Google Analytics, MAMP, Sequel Pro</p>
+                    <p><strong>Description: </strong>As a DevOps Engineer, my responsibilities focused mainly on site updates and maintenance. This would occur across multiple environments, on production and development servers. I have also maintained and migrated git repositories for every site we have developed or currently support.</p>
+                    <p><strong>Skills: </strong>git (including branches), bash scripting, command line tools (drush, mysql), site deployment on live servers, Drupal core and contributed module updates, Google Analytics, MAMP, Sequel Pro.</p>
                   </div>
                 </div>
               </div>
