Some grammar fixes

--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
                   </div>
                   <div class="card-footer">
                     <p>September 2013 - Present</p>
-                    <p><strong>Description: </strong>As a DevOps Engineer, my responsibilities focused mainly on site updates and maintenance. This would occur across multiple environments, on production and development servers. I have also maintained and migrated git repositories for every site we have developed or currently support.</p>
+                    <p><strong>Description: </strong>As a DevOps Engineer, my responsibilities focused mainly on site updates and maintenance across multiple environments, including production and development servers. I have also maintained and migrated git repositories for every site we have developed or currently support.</p>
                     <p><strong>Skills: </strong>git (including branches), bash scripting, command line tools (drush, mysql), site deployment on live servers, Drupal core and contributed module updates, Google Analytics, MAMP, Sequel Pro.</p>
                   </div>
                 </div>
@@ -87,7 +87,7 @@
                   <div class="card-footer">
                     <p>September 2013 - Present</p>
                     <p><strong>Description: </strong>Site development requires thourough testing, throughout all stages of a project. I've used many different technologies to help streamline and automate the QA process.</p>
-                    <p><strong>Skills: </strong>Browserstack testing automation, Litmus testing automation, VirtualBox, comparision across multiple devices</p>
+                    <p><strong>Skills: </strong>Browserstack testing automation, Litmus testing automation, VirtualBox, comparision across multiple devices.</p>
                   </div>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                   </div>
                   <div class="card-footer">
                     <p>October 2014</p>
-                    <p>Once a month at TEN7, we would spend a whole day as a company working on personal projects. This particular instance I was compelled to put together a collection of the vast amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
+                    <p>Once every month at TEN7, we spent a whole day as a company working on personal projects. This particular instance I was compelled to put together a collection of the huge amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
                     <a class="card-action" href="http://devops-ipsum.github.io" target="_blank">DevOps-Ipsum</a>
                   </div>
                 </div>
@@ -159,7 +159,7 @@
                   <div class="card-footer">
                     <p>June 2013 - September 2013</p>
                     <p><strong>Description: </strong>The computer-based testing software produced by Pearson VUE is vastly in-depth, and thus requires in-depth testing. I helped to write and perfom numerous automated test scenarios that were performed on the functionality of Pearson VUE software on a daily basis.</p>
-                    <p><strong>Skills: </strong>Twist automation software, Perforce version control, introduction to a very large code base, writing custom SQL queries, various database visualization software, realizing I hate working in a cubicle</p>
+                    <p><strong>Skills: </strong>Twist automation software, Perforce version control, introduction to a very large code base, writing custom SQL queries, various database visualization software, realizing that working in a cubicle was not for me.</p>
                     <a class="card-action" href="http://pearsonvue.com" target="_blank">Pearson VUE</a>
                   </div>
                 </div>
@@ -174,7 +174,7 @@
                   </div>
                   <div class="card-footer">
                     <p>August 2013 - September 2013</p>
-                    <p><strong>Description: </strong>Myself, along with three other summer interns, created a visual display of the nightly test results. We used SQL queries, along with reporting software to see graphs and visually appealing data to show results from hundreds of tests.</p>
+                    <p><strong>Description: </strong>Working in a team consisting of three other summer interns, we created a visual display of the nightly test results. We used SQL queries, along with reporting software to see graphs and visually appealing data showing results from hundreds of tests.</p>
                     <p><strong>Skills: </strong>iReports database reporting tools, SQL queries, some Java</p>
                   </div>
                 </div>
@@ -213,9 +213,9 @@
                   </div>
                   <div class="card-footer">
                     <p>September 2013 - January 2014</p>
-                    <p><strong>Description: </strong>The last step in finishing my physics degree was to complete a semester-long independent project. I joined a team of physics graduates who were working on a web-based physics tutor for younger students. I was tasked with much of the server configuration for the application, as well as extensive configuration and testing of the application itself. This was my first experience working with hosting and server configuration, and I vastly improved my own skills during this time.</p>
+                    <p><strong>Description: </strong>The last step in finishing my physics degree was to complete a semester-long independent project. I joined a team of physics graduates who were working on a web-based physics tutor for younger students. Much of my job was to set up the server configuration for the application, as well as extensive configuration and testing of the application itself. This was my first experience working with hosting and server configuration, and I vastly improved my own skills during this time.</p>
                     <p><strong>Skills: </strong>Linux with apache server configuration, Shibboleth authentication, experience using Flex, team collaboration and troubleshooting on a long term project.</p>
-                    <a class="card-action" href="#">UMN Physics Education Research</a>
+                    <a class="card-action" href="http://groups.physics.umn.edu/physed/">UMN Physics Education Research</a>
                   </div>
                 </div>
               </div>
@@ -239,7 +239,7 @@
                   <div class="card-footer">
                     <p>Graduated: December 2013</p>
                     
-                    <p><strong>Skills: </strong>Calculus, problem solving, quantum mechanics, Shrodingers Equation, never wanting to solve the Shrodinger equation again</p>
+                    <p><strong>Skills: </strong>Calculus, problem solving, quantum mechanics, Shrodingers Equation, never wanting to solve the Shrodinger equation again.</p>
                     <a class="card-action" href="http://umn.edu" target="_blank">UMN</a>
                   </div>
                 </div>
@@ -255,8 +255,8 @@
                   </div>
                   <div class="card-footer">
                     <p>September 2009 - June 2013</p>
-                    <p><strong>Description: </strong>The Evans Scholarship Program is a nation-wide foundation lead by the Western Golf Association. The program awards four-year, full tuition scholarships to caddies at 14 different schools in the US. I was incredibly fortunate to be an Evans Scholar, and wouldn't be where I am now without the scholarship.</p>
-                    <p><strong>Skills: </strong>Group living, community service, beer drinking.</p>
+                    <p><strong>Description: </strong>The Evans Scholarship Program is a nation-wide foundation lead by the Western Golf Association. The program awards four-year, full tuition scholarships to caddies at 14 different schools in the US. Selection is based on High School GPA, ACT scores, an outstanding caddie record, as well as finantial need. During my four years with the Evans Scholarship, I held multiple chair positions, and participated in numerous community service projects.</p>
+                    <p><strong>Skills: </strong>Group living, community service, large scale event coordination, mentoring of my fellow scholars, beer drinking.</p>
                     <a class="card-action" href="http://www.wgaesf.org/" target="_blank">Western Golf Association</a>
                   </div>
                 </div>
