--- a/contact/index.html
+++ b/contact/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <link rel="icon" href="img/c.png">
+        <link rel="icon" href="../img/c.png">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../stylesheets/materialize.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../stylesheets/custom.css" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../stylesheets/animate.css" media="screen,projection"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/js.js"></script>
+        <script type="text/javascript" src="../js/materialize.min.js"></script>
+        <script type="text/javascript" src="../js/js.js"></script>
         <script>
         $(function(){
         $("#footer").load("footer.html");
