--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul id="nav-mobile" class="right side-nav">
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About Me</a></li>
-          <li><a href="contact/index.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       </div>
