--- a/work.html
+++ b/work.html
@@ -97,21 +97,21 @@
                 <h2 class="header light-blue-text darken-1">Major Projects</h2>
                 <div class="card z-depth-3 green">
                   <div class="card-content">
-                    <img class="developer" src="">
+                    <img class="developer" src="img/ict.jpg">
                     <span class="card-title">InnerCity Tennis</span>
                   </div>
                   <div class="card-footer">
                     <p>June 2014 - December 2014</p>
                     <p>This project was a complete site redesign from square one, on which I was the sole developer. Being able to own every development step along the way was an incredible learning experience, and has vastly improved my own skills.</p>
                     <p><strong>Skills: </strong>Completing and participating in a long-term project from start to finish, communicating with clients in regard to new requests and site functionality, maintaining a level-head throughout many frustrating stages of the process.</p>
-                    <a class="card-action" href="" target="_blank">Link Coming Soon!</a>
+                    <a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col s12">
-                <h2 class="header light-blue-text darken-1">Hackday Projects</h2>
+                <h2 class="header light-blue-text darken-1">Personal Projects</h2>
                 <div class="card z-depth-3 green">
                   <div class="card-image">
                     <img class="memeify" src="img/doi.jpg">
@@ -119,7 +119,7 @@
                   </div>
                   <div class="card-footer">
                     <p>October 2014</p>
-                    <p>Once every month at TEN7, we spent a whole day as a company working on personal projects. This particular instance I was compelled to put together a collection of the huge amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
+                    <p>Once every month at TEN7, we spent a whole day as a company working on personal projects. This particular instance I put together a collection of the huge amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
                     <a class="card-action" href="http://devops-ipsum.github.io" target="_blank">DevOps-Ipsum</a>
                   </div>
                 </div>
