--- a/work.html
+++ b/work.html
@@ -96,10 +96,10 @@
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Major Projects</h2>
                 <div class="card z-depth-3 green">
-                  <div class="card-content">
+                   <div class="card-image">
                     <img class="developer" src="img/ict.jpg">
                     <span class="card-title">InnerCity Tennis</span>
-                  </div>
+                  </div>                  
                   <div class="card-footer">
                     <p>June 2014 - December 2014</p>
                     <p>This project was a complete site redesign from square one, on which I was the sole developer. Being able to own every development step along the way was an incredible learning experience, and has vastly improved my own skills.</p>
