Changed front page pic

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="row center">
           <div class="col s12">
-          <img class="me center" width="250" src="img/me.jpg">
+          <img class="me center" width="250" src="img/profile.jpg">
           </div>
         </div>
         <div class="row center">
