--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <div class="section">
       <div class="container">
-        <div class="row">
+        <div class="row center">
           <div class="col s12">
           <h1 class="header light-blue-text">
           Coleman Rollins
