Updated with good resume

--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
       <p class="no-marg flow-text white-text foot">Created in 2014 by Coleman Rollins </br>
       using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> open source framework
       </p>
-    <p class="no-marg flow-text white-text foot">Download my<a href="NewResume.pdf" target="_blank" class="m"> Resume</a></p>
+    <p class="no-marg flow-text white-text foot">Download my<a href="resume.pdf" target="_blank" class="m"> Resume</a></p>
     </div>
   </div>
 </div>
