Quick addition to joke page

--- a/ohithinktheylikeme/index.html
+++ b/ohithinktheylikeme/index.html
@@ -6,6 +6,7 @@
         <div class="frame main">
             <div class="bit-5"></div>
             <div class="bit-60">
+                <h1>YUP</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/w5vxVuee5qA" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="bit-5"></div>
