--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,7 @@
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/materialize.css" media="screen,projection"/>
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/custom.css" media="screen,projection"/>
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/animate.css" media="screen,projection"/>
+	<link rel="canonical" href="http://colemanrollins.io/about/">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="/assets/js/materialize.min.js"></script>
@@ -100,8 +101,8 @@
         </div>
       </div>
       <div class="row center">
-        <p class="no-marg flow-text white-text foot">Created in 2014 by Coleman Rollins </br>
-          using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> open source framework
+        <p class="no-marg flow-text white-text foot">Created by Coleman Rollins </br>
+          using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> and <a href="http://jekyllrb.com/" target="_blank" class="m">Jekyll</a>
         </p>
         <p class="no-marg flow-text white-text foot">Download my<a href="assets/resume.pdf" target="_blank" class="m"> Resume</a></p>
       </div>
