re-gen with blog now

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="alternate" type="application/rss+xml" title="Coleman Rollins' Portfolio" href="http://colemanrollins.io/feed.xml" />
 </head> -->
 <head>
+	<meta charset="utf-8">
 	<link rel="icon" href="/assets/img/c.png">
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/materialize.css" media="screen,projection"/>
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/custom.css" media="screen,projection"/>
@@ -33,6 +34,7 @@
         <li><a href="/work/">Work</a></li>
         <li><a href="/about/">About Me</a></li>
         <li><a href="/contact/">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
       </ul>
       <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
     </div>
@@ -58,14 +60,17 @@
       <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps Engineer</h4>
     </div>
     <div class="row center">
-      <div class="col s12 l4">
+      <div class="col s12 l3">
         <a href="/work/" class="waves-effect waves-light btn light-blue">My Work</a>
       </div>
-      <div class="col s12 l4">
+      <div class="col s12 l3">
         <a href="/about/" class="waves-effect waves-light btn light-blue">About Me</a>
       </div>
-      <div class="col s12 l4">
+      <div class="col s12 l3">
         <a href="/contact/" class="waves-effect waves-light btn light-blue">Contact</a>
+      </div>
+      <div class="col s12 l3">
+        <a href="/blog/" class="waves-effect waves-light btn light-blue">Blog</a>
       </div>
     </div>
   </div>
