--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,7 @@
 	<link rel="alternate" type="application/rss+xml" title="Coleman Rollins' Portfolio" href="http://colemanrollins.io/feed.xml" />
 </head> -->
 <head>
+	<meta charset="utf-8">
 	<link rel="icon" href="/assets/img/c.png">
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/materialize.css" media="screen,projection"/>
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/custom.css" media="screen,projection"/>
@@ -33,6 +34,7 @@
         <li><a href="/work/">Work</a></li>
         <li><a href="/about/">About Me</a></li>
         <li><a href="/contact/">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
       </ul>
       <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
     </div>
