re gen: fixed resume link, removed commented header stuff

--- a/about/index.html
+++ b/about/index.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <!-- <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coleman Rollins' Portfolio</title>
-	<meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
-">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="canonical" href="http://colemanrollins.io/about/">
-	<link rel="alternate" type="application/rss+xml" title="Coleman Rollins' Portfolio" href="http://colemanrollins.io/feed.xml" />
-</head> -->
-<head>
+  <head>
 	<meta charset="utf-8">
 	<link rel="icon" href="/assets/img/c.png">
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/materialize.css" media="screen,projection"/>
@@ -24,6 +13,9 @@
 	<script type="text/javascript" src="/assets/js/materialize.min.js"></script>
 	<script type="text/javascript" src="/assets/js/js.js"></script>
 	<script src="/assets/js/wow.min.js"></script>
+	<script>
+    	new WOW().init();
+    </script>
 </head>
 
   <nav class="light-blue z-depth-1">
@@ -61,7 +53,7 @@
 	<div class="row container">
 		<div class="col s12 m4">
 			<img class="materialboxed center wide" src="/assets/img/feetup.jpg">
-
+			
 		</div>
 		<div class="col s12 m4">
 			<img class="materialboxed center wide" src="/assets/img/ivan.jpg">
@@ -96,14 +88,14 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-
+          
         </div>
       </div>
       <div class="row center">
         <p class="no-marg flow-text white-text foot">Created by Coleman Rollins </br>
           using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> and <a href="http://jekyllrb.com/" target="_blank" class="m">Jekyll</a>
         </p>
-        <p class="no-marg flow-text white-text foot">Download my<a href="assets/resume.pdf" target="_blank" class="m"> Resume</a></p>
+        <p class="no-marg flow-text white-text foot">Download my<a href="/assets/resume.pdf" target="_blank" class="m"> Resume</a></p>
       </div>
     </div>
   </div>
