--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,8 @@
 	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/animate.css" media="screen,projection"/>
 	<link rel="canonical" href="http://colemanrollins.io/contact/">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+	<meta name="description" content="Portfolio site for Coleman Rollins, Web Developer
+">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="/assets/js/materialize.min.js"></script>
 	<script type="text/javascript" src="/assets/js/js.js"></script>
