New pics for about

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
 <div class="section white">
 	<div class="row container">
 		<div class="col s12 m4">
-			<img class="materialboxed center wide" src="/assets/img/kahda.jpg">
+			<img class="materialboxed center wide" src="/assets/img/feetup.jpg">
 		</div>
 		<div class="col s12 m4">
 			<img class="materialboxed center wide" src="/assets/img/bikes.jpg">
@@ -54,14 +54,14 @@
 	</div>
 	<div class="row container">
 		<div class="col s12 m4">
-			<img class="materialboxed center wide" src="/assets/img/feetup.jpg">
-			
+			<img class="materialboxed center wide" src="/assets/img/hammock.jpg">
+
 		</div>
 		<div class="col s12 m4">
-			<img class="materialboxed center wide" src="/assets/img/ivan.jpg">
+			<img class="materialboxed center wide" src="/assets/img/hockey.jpg">
 		</div>
 		<div class="col s12 m4">
-			<img class="materialboxed center wide" src="/assets/img/keyboards.jpg">
+			<img class="materialboxed center wide" src="/assets/img/charged.jpg">
 		</div>
 	</div>
 	<div class="row container">
@@ -72,10 +72,11 @@
 			<img class="materialboxed center wide" src="/assets/img/meta.jpg">
 		</div>
 		<div class="col s12 m4">
-			<img class="materialboxed center wide" src="/assets/img/prokart.jpg">
+			<img class="materialboxed center wide" src="/assets/img/ramen.jpg">
 		</div>
 	</div>
 </div>
+
 
     <div id="footer">
   <div class="section grey darken-1">
