--- a/work/index.html
+++ b/work/index.html
@@ -40,9 +40,9 @@
 	<div class="col s12 fixed no-pad">
 		<ul class="tabs z-depth-1">
 			<li class="tab"><a href="#tab1">TEN7</a></li>
-			<li class="tab"><a href="#tab2">Pearson</a></li>
-			<li class="tab"><a href="#tab3">U Of M</a></li>
-			<li class="tab"><a href="#tab4">Education</a></li>
+			<li class="tab"><a href="#tab2">Personal Projects</a></li>
+			<li class="tab"><a href="#tab3">Pearson</a></li>
+			<li class="tab"><a href="#tab4">U Of M</a></li>
 		</ul>
 	</div>
 </div>
@@ -62,8 +62,8 @@
 							</div>
 							<div class="card-footer">
 								<p>December 2013 - Present</p>
-								<p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7, from supporting roles to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
-								<p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Multiple Web Frameworks, PhotoShop.</p>
+								<p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7, both in a supporting and lead role. I have worked in a team, as well as individually, while using new technologies every day.</p>
+								<p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Bootstrap, AngularJS, Node/ExpressJS, PhotoShop.</p>
 								<a class="card-action" href="http://ten7.com" target="_blank">Link to TEN7</a>
 							</div>
 						</div>
@@ -100,19 +100,15 @@
 						<h2 class="header light-blue-text darken-1">Major Projects</h2>
 						<div class="card z-depth-3 green">
 							<div class="card-image">
-								<img class="developer" src="/assets/img/ict.jpg">
-								<span class="card-title">InnerCity Tennis</span>
+								<img class="developer" src="/assets/img/varde.jpg">
+								<span class="card-title">Varde</span>
 							</div>
 							<div class="card-footer">
-								<p>June 2014 - December 2014</p>
-								<p><strong>Skills: </strong>Completing and participating in a long-term project from start to finish, communicating with clients in regard to new requests and site functionality, maintaining a level-head throughout many frustrating stages of the process.</p>
-								<a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
+								<p>July 2015 - Present</p>
+								<p><strong>Description: </strong>Drupal 7 site build from scratch for the Varde Partners investment managing firm.</p>
+								<a class="card-action" href="" target="_blank">Link Coming Soon!</a>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12">
 						<div class="card z-depth-3 green">
 							<div class="card-image">
 								<img class="developer" src="/assets/img/msd.jpg">
@@ -120,7 +116,7 @@
 							</div>
 							<div class="card-footer">
 								<p>March 2015 - April 2015</p>
-								<p><strong>Skills: </strong>Complete refresh of an old site, using newer tools and methods.</p>
+								<p><strong>Skills: </strong>Refresh of an old site in Drupal 7, using newer tools and methods.</p>
 								<a class="card-action" href="http://marketstreetdermatology.com" target="_blank">Market Street Dermatology</a>
 							</div>
 						</div>
@@ -128,7 +124,22 @@
 				</div>
 				<div class="row">
 					<div class="col s12">
-						<h2 class="header light-blue-text darken-1">Personal Projects</h2>
+						<div class="card z-depth-3 green">
+							<div class="card-image">
+								<img class="developer" src="/assets/img/ict.jpg">
+								<span class="card-title">InnerCity Tennis</span>
+							</div>
+							<div class="card-footer">
+								<p>June 2014 - December 2014</p>
+								<p><strong>Description: </strong>Complete site re-build in Drupal 7 for a local non-profit organization that brings tennis to kids from all backgrounds in Minneapolis.</p>
+								<a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<h2 class="header light-blue-text darken-1">Personal Projects at TEN7</h2>
 						<div class="card z-depth-3 green">
 							<div class="card-image">
 								<img class="memeify" src="/assets/img/doi.jpg">
@@ -136,7 +147,7 @@
 							</div>
 							<div class="card-footer">
 								<p>October 2014</p>
-								<p>Once every month at TEN7, we spent a whole day as a company working on personal projects. This particular instance I put together a collection of the huge amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
+								<p>A for fun day-project involving some of our most used DevOps terminology, bootstrap and some jQuery.</p>
 								<a class="card-action" href="http://devops-ipsum.github.io" target="_blank">DevOps-Ipsum</a>
 							</div>
 						</div>
@@ -151,7 +162,7 @@
 							</div>
 							<div class="card-footer">
 								<p>September 2014</p>
-								<p>This hackday I decided to try my hand at android development. Using Eclipse, Java, and the Android SDK, I was able to put together a fully functioning (albeit terrible) meme generator app. </p>
+								<p>Trying my hand at my first stot at Android development, I managed to put together a rough meme generator app that lets you create memes from your pictures on the go. Written in Java.</p>
 							</div>
 						</div>
 					</div>
@@ -159,8 +170,29 @@
 			</div>
 		</div>
 	</div>
-	<!-- Pearson -->
+	<!-- Personal Projects -->
 	<div id="tab2" class="col s12">
+		<div class="section WOW fadeInUp">
+			<div class="row">
+				<div class="col s12">
+					<div class="card z-depth-3 amber">
+						<div class="card-image">
+							<img class="sqa" src="/assets/img/deadless.png">
+							<span class="card-title">Headless Drupal</span>
+						</div>
+						<div class="card-footer">
+							<p>June 2015</p>
+							<p><strong>Description: </strong>Lately I've taken a great interest to Headless Drupal. The concept is using Drupal 7/8 to manage your content like normal, but skip the theme layer and spit out your content as an API. For the front-end, you build an application around the API using modern javaScript frameworks. You're left with an extremely fast and lightweight site that uses the best of both worlds. Plus, it's given me a chance to explore web technologies that I wouldn't normally come across.</p>
+							<p><strong>Skills: </strong>AngularJS, RESTful Services, NodeJS, ExpressJS</p>
+							<a class="card-action" href="https://groups.drupal.org/headless-drupal" target="_blank">Drupal.org Headless group</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Pearson -->
+	<div id="tab3" class="col s12">
 		<div class="section WOW fadeInUp">
 			<div class="row">
 				<h1 class="header light-blue-text darken-1">Pearson VUE</h1>
@@ -200,14 +232,13 @@
 			</div>
 		</div>
 	</div>
-	<!-- U of M -->
-	<div id="tab3" class="col s12">
+	<!-- Education -->
+	<div id="tab4" class="col s12">
 		<div class="section WOW fadeInUp">
 			<div class="row">
 				<h1 class="header light-blue-text darken-1">University of MN - IT Department</h1>
 				<div class="row">
 					<div class="col s12">
-						<h2 class="header light-blue-text darken-1">Roles</h2>
 						<div class="card z-depth-3 orange darken-1">
 							<div class="card-content">
 								<h1>Service Technician</h1>
@@ -238,11 +269,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<!-- Education -->
-	<div id="tab4" class="col s12">
-		<div class="section WOW fadeInUp">
 			<div class="row">
 				<h1 class="header light-blue-text darken-1">University of Minnesota</h1>
 				<div class="row">
@@ -281,6 +307,7 @@
 		</div>
 	</div>
 </div>
+
 
     <div id="footer">
   <div class="section grey darken-1">
