Added github link to footer and more personal project

--- a/work/index.html
+++ b/work/index.html
@@ -189,6 +189,21 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col s12">
+					<div class="card z-depth-3 amber">
+						<div class="card-image">
+							<img class="sqa" src="/assets/img/deadless.png">
+							<span class="card-title">Starcraft 2 Build Editor</span>
+						</div>
+						<div class="card-footer">
+							<p>June 2015</p>
+							<p><strong>Description: </strong></p>
+							<a class="card-action" href="https://github.com/themezzilla/starcraft-build-editor" target="_blank">GitHub Repository</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<!-- Pearson -->
@@ -315,6 +330,7 @@
       <div class="row center twitter-row">
         <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="/assets/img/twitter.png"></a>
         <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="/assets/img/linkedin.png"></a>
+        <a href="https://github.com/themezzilla" target="_blank"><img class="in" src="/assets/img/github.png"></a>
         <a href="mailto:crollins199@gmail.com"><i class="white-text medium mdi-communication-email"></i></a>
       </div>
     </div>
@@ -322,7 +338,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          
+
         </div>
       </div>
       <div class="row center">
@@ -342,6 +358,7 @@
     ga('create', 'UA-57713704-1', 'auto');
     ga('send', 'pageview');
     </script>
+
 
   </body>
 
