--- a/about/index.html
+++ b/about/index.html
@@ -84,6 +84,7 @@
       <div class="row center twitter-row">
         <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="/assets/img/twitter.png"></a>
         <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="/assets/img/linkedin.png"></a>
+        <a href="https://github.com/themezzilla" target="_blank"><img class="in" src="/assets/img/github.png"></a>
         <a href="mailto:crollins199@gmail.com"><i class="white-text medium mdi-communication-email"></i></a>
       </div>
     </div>
@@ -91,7 +92,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          
+
         </div>
       </div>
       <div class="row center">
@@ -111,6 +112,7 @@
     ga('create', 'UA-57713704-1', 'auto');
     ga('send', 'pageview');
     </script>
+
 
   </body>
 
