Changed some stuff on work page

--- a/work/index.html
+++ b/work/index.html
@@ -192,13 +192,12 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="card z-depth-3 amber">
-						<div class="card-image">
-							<img class="sqa" src="/assets/img/deadless.png">
-							<span class="card-title">Starcraft 2 Build Editor</span>
+						<div class="card-content">
+							<h1>Starcraft 2 Build Editor</h1>
 						</div>
 						<div class="card-footer">
-							<p>June 2015</p>
-							<p><strong>Description: </strong></p>
+							<p>Feb 2015</p>
+							<p><strong>Description: </strong>A for-fun project using Materialize, jQuery and the micro-framework Flask (Python) to help Starcraft 2 players analyze their builds and strategies from a numbers perspective.</p>
 							<a class="card-action" href="https://github.com/themezzilla/starcraft-build-editor" target="_blank">GitHub Repository</a>
 						</div>
 					</div>
