--- a/contact/index.html
+++ b/contact/index.html
@@ -39,7 +39,7 @@
     <div class="section">
     <div class="container">
         <div class="row">
-            <h2 class="header light-blue-text">Shoot me a note, I'd love to hear from you!</h2>
+            <h2 class="header light-blue-text">Say hi</h2>
             <form id="form1" name="form1" class="col s12" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
                 action="https://colemanrollins.wufoo.com/forms/zpryyul1fte5kd/#public">
                 <div id="foli1" class="input-field">
@@ -70,6 +70,7 @@
         </div>
     </div>
 </div>
+
 
     <div id="footer">
   <div class="section grey darken-1">
