--- a/work/index.html
+++ b/work/index.html
@@ -42,7 +42,7 @@
 			<li class="tab"><a href="#tab1">TEN7</a></li>
 			<li class="tab"><a href="#tab2">Personal Projects</a></li>
 			<li class="tab"><a href="#tab3">Pearson</a></li>
-			<li class="tab"><a href="#tab4">U Of M</a></li>
+			<li class="tab"><a href="#tab4">University Of Minnesota</a></li>
 		</ul>
 	</div>
 </div>
