--- a/work/index.html
+++ b/work/index.html
@@ -1,42 +1,9 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+url: work
+---
 
-  <head>
-	<meta charset="utf-8">
-	<link rel="icon" href="/assets/img/c.png">
-	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/materialize.css" media="screen,projection"/>
-	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/custom.css" media="screen,projection"/>
-	<link type="text/css" rel="stylesheet" href="/assets/stylesheets/animate.css" media="screen,projection"/>
-	<link rel="canonical" href="http://colemanrollins.io/work/">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-	<meta name="description" content="Portfolio site for Coleman Rollins, Web Developer
-">
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/assets/js/materialize.min.js"></script>
-	<script type="text/javascript" src="/assets/js/js.js"></script>
-	<script src="/assets/js/wow.min.js"></script>
-	<script>
-    	new WOW().init();
-    </script>
-</head>
-
-  <nav class="light-blue z-depth-1">
-  <div class="container">
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo white-text"><img class="brand" src="/assets/img/c.png"></a>
-      <ul id="nav-mobile" class="right side-nav">
-        <li><a href="/work/">Work</a></li>
-        <li><a href="/about/">About Me</a></li>
-        <li><a href="/contact/">Contact</a></li>
-        <li><a href="/blog/">Blog</a></li>
-      </ul>
-      <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
-    </div>
-  </div>
-</nav>
-  <body>
-
-    <div class="row center fixed" id="tabz">
+<div class="row center fixed" id="tabz">
 	<div class="col s12 fixed no-pad">
 		<ul class="tabs z-depth-1">
 			<li class="tab"><a href="#tab1">TEN7</a></li>
@@ -321,44 +288,3 @@
 		</div>
 	</div>
 </div>
-
-
-    <div id="footer">
-  <div class="section grey darken-1">
-    <div class="container">
-      <div class="row center twitter-row">
-        <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="/assets/img/twitter.png"></a>
-        <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="/assets/img/linkedin.png"></a>
-        <a href="https://github.com/themezzilla" target="_blank"><img class="in" src="/assets/img/github.png"></a>
-        <a href="mailto:crollins199@gmail.com"><i class="white-text medium mdi-communication-email"></i></a>
-      </div>
-    </div>
-    <a name="contact"></a>
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-
-        </div>
-      </div>
-      <div class="row center">
-        <p class="no-marg flow-text white-text foot">Created by Coleman Rollins </br>
-          using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> and <a href="http://jekyllrb.com/" target="_blank" class="m">Jekyll</a>
-        </p>
-        <p class="no-marg flow-text white-text foot">Download my<a href="/assets/resume.pdf" target="_blank" class="m"> Resume</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-57713704-1', 'auto');
-    ga('send', 'pageview');
-    </script>
-
-
-  </body>
-
-</html>
