--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       </div>
     </div>
     <div class="row center">
-      <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps Engineer</h4>
+      <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer</h4>
     </div>
     <div class="row center">
       <div class="col s12 l3">
