New resume, rearranged work stuff, added link to fantasy generator

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
     <div class="row center">
       <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer</h4>
     </div>
-    <div class="row center">
+    <div class="row center" id="buttons">
       <div class="col s12 l3">
         <a href="/work/" class="waves-effect waves-light btn light-blue">My Work</a>
       </div>
@@ -32,6 +32,7 @@ layout: default
       <div class="col s12 l3">
         <a href="/blog/" class="waves-effect waves-light btn light-blue">Blog</a>
       </div>
+      <h5> Fantasy team name generator > <a href="/fantasy-generator/" class="">here</a></h5>
     </div>
   </div>
 </div>
