--- a/work/index.html
+++ b/work/index.html
@@ -18,7 +18,56 @@ url: work
 	<div id="tab1" class="col s12">
 		<div class="section WOW fadeIn" id="sec1">
 			<div class="row">
-				<h1 class="header light-blue-text">TEN7 Interactive</h1>
+				<h1 class="header light-blue-text"><a href="http://ten7.com" target="_blank">TEN7</a> Interactive</h1>
+				<div class="row">
+					<div class="col s12">
+						<h2 class="header light-blue-text darken-1">Major Projects</h2>
+						<div class="card z-depth-3 green">
+							<div class="card-image">
+								<img class="developer" src="/assets/img/bh.jpg">
+								<span class="card-title">Blue Hot Creative</span>
+							</div>
+							<div class="card-footer">
+								<p>July 2015 - Present</p>
+								<p><strong>Description: </strong>Drupal 7 site build from scratch for the Blue Hot Creative agency in Minneapolis.</p>
+								<a class="card-action" href="http://www.bluehotcreative.com" target="_blank">Blue Hot</a>
+							</div>
+						</div>
+						<div class="card z-depth-3 green">
+							<div class="card-image">
+								<img class="developer" src="/assets/img/varde.jpg">
+								<span class="card-title">Varde</span>
+							</div>
+							<div class="card-footer">
+								<p>July 2015 - Present</p>
+								<p><strong>Description: </strong>Drupal 7 site build from scratch for the Varde Partners investment managing firm.</p>
+								<a class="card-action" href="https://www.varde.com" target="_blank">Varde.com</a>
+							</div>
+						</div>
+						<div class="card z-depth-3 green">
+							<div class="card-image">
+								<img class="developer" src="/assets/img/msd.jpg">
+								<span class="card-title">Market Street Dermatology</span>
+							</div>
+							<div class="card-footer">
+								<p>March 2015 - April 2015</p>
+								<p><strong>Skills: </strong>Refresh of an older site in Drupal 7, using newer tools and methods.</p>
+								<a class="card-action" href="http://marketstreetdermatology.com" target="_blank">Market Street Dermatology</a>
+							</div>
+						</div>
+						<div class="card z-depth-3 green">
+							<div class="card-image">
+								<img class="developer" src="/assets/img/ict.jpg">
+								<span class="card-title">InnerCity Tennis</span>
+							</div>
+							<div class="card-footer">
+								<p>June 2014 - December 2014</p>
+								<p><strong>Description: </strong>Complete site re-build in Drupal 7 for a local non-profit organization that brings tennis to kids from all backgrounds in Minneapolis.</p>
+								<a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col s12">
 						<h2 class="header light-blue-text">Roles</h2>
@@ -58,48 +107,6 @@ url: work
 								<p>September 2013 - Present</p>
 								<p><strong>Description: </strong>Site development requires thourough testing, throughout all stages of a project. I've used many different technologies to help streamline and automate the QA process.</p>
 								<p><strong>Skills: </strong>Browserstack testing automation, Litmus testing automation, VirtualBox, comparision across multiple devices.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12">
-						<h2 class="header light-blue-text darken-1">Major Projects</h2>
-						<div class="card z-depth-3 green">
-							<div class="card-image">
-								<img class="developer" src="/assets/img/varde.jpg">
-								<span class="card-title">Varde</span>
-							</div>
-							<div class="card-footer">
-								<p>July 2015 - Present</p>
-								<p><strong>Description: </strong>Drupal 7 site build from scratch for the Varde Partners investment managing firm.</p>
-								<a class="card-action" href="" target="_blank">Link Coming Soon!</a>
-							</div>
-						</div>
-						<div class="card z-depth-3 green">
-							<div class="card-image">
-								<img class="developer" src="/assets/img/msd.jpg">
-								<span class="card-title">Market Street Dermatology</span>
-							</div>
-							<div class="card-footer">
-								<p>March 2015 - April 2015</p>
-								<p><strong>Skills: </strong>Refresh of an old site in Drupal 7, using newer tools and methods.</p>
-								<a class="card-action" href="http://marketstreetdermatology.com" target="_blank">Market Street Dermatology</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12">
-						<div class="card z-depth-3 green">
-							<div class="card-image">
-								<img class="developer" src="/assets/img/ict.jpg">
-								<span class="card-title">InnerCity Tennis</span>
-							</div>
-							<div class="card-footer">
-								<p>June 2014 - December 2014</p>
-								<p><strong>Description: </strong>Complete site re-build in Drupal 7 for a local non-profit organization that brings tennis to kids from all backgrounds in Minneapolis.</p>
-								<a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
 							</div>
 						</div>
 					</div>
