Added olfactory to personal projects

--- a/work/index.html
+++ b/work/index.html
@@ -151,6 +151,22 @@ url: work
 				<div class="col s12">
 					<div class="card z-depth-3 amber">
 						<div class="card-image">
+							<img class="sqa" src="/assets/img/olfactory.jpg">
+							<span class="card-title">Ol' Factory</span>
+						</div>
+						<div class="card-footer">
+							<p>August 2015 - Present</p>
+							<p><strong>Description: </strong>I've teamed up with friends to help bring a lightweight and affordable respriator to communities in need.</p>
+							<p><strong>Skills: </strong>D3.js, Bootstrap, CSS animations</p>
+							<a class="card-action" href="http://olfactory.io" target="_blank">Ol'Factory</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12">
+					<div class="card z-depth-3 amber">
+						<div class="card-image">
 							<img class="sqa" src="/assets/img/deadless.png">
 							<span class="card-title">Headless Drupal</span>
 						</div>
